--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 1 下载后直接执行sh install.sh
 2 python和nginx都安装在/usr/local目录下面
 3 安装过程中可能会出现因依赖不能自动安装问题，可以邮件给我ahwind@163.com。
+4 目前仅适用于rhel5(centos5)x64系统
